Update portfolio study French

--- a/index.html
+++ b/index.html
@@ -57,54 +57,68 @@
                         <div class="col">
                             <img class="avatar" src="assets/img/Profile.png" alt="..." />
                         </div>
+                    </div>
                 </div>
             </div>
         </header>
+
         <!-- About-->
         <section class="page-section bg-primary" id="about">
-            <div class="container px-4 px-lg-5">
+            <div class="container px-6 px-lg-6">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8 text-center">
+                    <div class="col text-center">
                         <h2 class="text-white mt-0">About me</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">
-                            I am a creative person in problem solving and analytical thinking. During my studies, 
-                            I have learned different technologies and programming languages, I am passionate about learning, 
-                            teamwork and I want to get a great experience as a programmer and thus be able to contribute to the needs of companies and their customers. 
-                            Throughout my career, I have been involved in large-scale complex projects, reengineering of functionalities and interfaces. 
-                            I believe that innovation and continuous improvement is a success factors for organizations, 
-                            so I tirelessly insist on applying these criteria in every initiative in which I have participated.</p>
+                        <div class="row">
+
+                            <div class="col">
+                                <img class="avatar" src="assets/img/About.png" alt="..." />
+                            </div>
+
+                            <div class="col">
+
+                                <p class="text-white-75">
+                                    I am a creative person in problem solving and analytical thinking. During my studies, 
+                                    I have learned different technologies and programming languages, I am passionate about learning, 
+                                    teamwork and I want to get a great experience as a programmer and thus be able to contribute to the needs of companies and their customers. 
+                                    Throughout my career, I have been involved in large-scale complex projects, reengineering of functionalities and interfaces. 
+                                    I believe that innovation and continuous improvement is a success factors for organizations, 
+                                    so I tirelessly insist on applying these criteria in every initiative in which I have participated.
+                                </p>
                             
-                            <div class="row">
-                                <div class="col">
-                                    <p class="text-white text-center">English</p>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 65%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="row">
+                                    <div class="col">
+                                        <p class="text-white text-center">English</p>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <p class="text-white text-center">Professional working proficiency</p>
                                     </div>
-                                    <p class="text-white text-center">Professional working proficiency</p>
-                                </div>
-                                <div class="col">
-                                    <p class="text-white text-center">French</p>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="col">
+                                        <p class="text-white text-center">French</p>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 35%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <p class="text-white text-center">Elementary proficiency</p>
                                     </div>
-                                    <p class="text-white text-center">Elementary proficiency</p>
-                                </div>
-                                <div class="col">
-                                    <p class="text-white text-center">Spanish</p>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="col">
+                                        <p class="text-white text-center">Spanish</p>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <p class="text-white text-center">Native or bilingual proficiency</p>
                                     </div>
-                                    <p class="text-white text-center">Native or bilingual proficiency</p>
                                 </div>
                             </div>
-                        </div><br>
-                    </div><br>
+
+                        </div><br>               
+                    </div>
                 </div>
                 <div class="align-self-baseline text-center">
                     <a class="btn btn-primary btn-xl" href="#skills">Technical Skills</a>
                 </div>
-            </section>
+            </div>
+        </section>
 
             <!-- Skills-->
             <section class="page-section masthead" id="skills">
@@ -206,6 +220,20 @@
                                     <div class="h7">Attestation of College Studies</div>
                                     <div class="h7">Institut supérieur d’informatique ISI</div>
                                     <div class="h7">Montreal, Canada&emsp;&emsp;Feb 2021 - Present</div>
+                                </div>          
+                            </div><br>
+
+                            <div class="row text-white">
+                                <div class="col">
+                                    <div class="col-md-2 text-center">
+                                        <a href="https://centrecsai.org/"><img src="assets/img/projects\image/csai.jpg" /></a>
+                                    </div>
+                                </div>
+                                <div class="col-md-9 text-left">
+                                    <div class="h5">Francisation Level 2 FIA109-3</div>
+                                    <div class="h7">French studies</div>
+                                    <div class="h7">Centre Social d'aide aux Immigrants - CSAI</div>
+                                    <div class="h7">Montreal, Canada&emsp;&emsp;July 2022 - Present</div>
                                 </div>          
                             </div><br>
 
@@ -343,9 +371,9 @@
                                 <h5 class="title">Landscaper</h5>
                                 <p>Boardwalk, Montréal QC, Canada</p>
                                 <p class="description">
-                                    Responsible for painting common areas of assigned buildings.
-                                    <b>||</b> Responsible for mowing the lawns around the buildings.
-                                    <b>||</b> Support the maintenance and concierges teams when necessary.
+                                    <li> Responsible for painting common areas of assigned buildings.
+                                    <li> Responsible for mowing the lawns around the buildings.
+                                    <li> Support the maintenance and concierges teams when necessary.
                                 </p>
                             </div>
                         </div>
@@ -363,16 +391,18 @@
                                 </div>
                             </div>
                             <div class="timeline-content">
-                                <h5 class="title">Applications Manager ERP</h5>
+                                <h5 class="title">Applications and Database Manager ERP</h5>
                                 <p>Permoda, Bogotá - Colombia</p>
                                 <p class="description">
-                                    Implemented agile methodologies for the execution and follow-up of projects and developments in Dynamics ERP.
-                                    <b>||</b> Supported my team with debugging code in the Dynamics ERP AOT for bug fixes.
-                                    <b>||</b> Developed database queries for incident resolution and analysis.
-                                    <b>||</b> Collaborated with product managers and third parties to identify and resolve issues coordinated system requirements, and created project schedules.
-                                    <b>||</b> Planned and executed annual budget for ERP improvement.
-                                    <b>||</b> Planned, implemented and supervised IT technology solutions to ensure satisfactory fulfillment of end-user requirements, implementation and support in a productive environment.
-                                    <b>||</b> Coordinated the development of virtual training material for the users’ application
+                                    <li> Implemented agile methodologies for the execution and follow-up of projects and developments in Dynamics ERP.</li>
+                                    <li> Supported my team with debugging code in the Dynamics ERP AOT for bug fixes.</li>
+                                    <li> Developed database queries for incident resolution and analysis.</li>
+                                    <li> Collaborated with product managers and third parties to identify and resolve issues coordinated system requirements, and created project schedules.</li>
+                                    <li> Monitor database performance, Define users and enable data distribution.</li>
+                                    <li> Database maintenance, indexes, re-indexing, statistics, locks, back-up</li>
+                                    <li> Planned and executed annual budget for ERP improvement.</li>
+                                    <li> Planned, implemented and supervised IT technology solutions to ensure satisfactory fulfillment of end-user requirements, implementation and support in a productive environment.</li>
+                                    <li> Coordinated the development of virtual training material for the users’ application</li>
                                 </p>
                             </div>
                         </div>
@@ -393,13 +423,13 @@
                                 <h5 class="title">Applications Professional ERP</h5>
                                 <p>Permoda, Bogotá - Colombia</p>
                                 <p class="description">
-                                    Escalated problems to the Technical Specialist Level third or above within the support structure.
-                                    <b>||</b> Led the definition and formation of plans for applications aimed to master users’ knowledge.
-                                    <b>||</b> Performed test runs for approval and implementation of developments in a production environment.
-                                    <b>||</b> Enhanced and maintained ERP functionalities and execute upcoming projects.
-                                    <b>||</b> Implemented and deployed ERP's standard modules and local functionalities.
-                                    <b>||</b> Optimized processes and procedures in the ERP
-                                    <b>||</b> Developed virtual training material amended to extend the ERP modules.
+                                    <li> Escalated problems to the Technical Specialist Level third or above within the support structure.
+                                    <li> Led the definition and formation of plans for applications aimed to master users’ knowledge.
+                                    <li> Performed test runs for approval and implementation of developments in a production environment.
+                                    <li> Enhanced and maintained ERP functionalities and execute upcoming projects.
+                                    <li> Implemented and deployed ERP's standard modules and local functionalities.
+                                    <li> Optimized processes and procedures in the ERP
+                                    <li> Developed virtual training material amended to extend the ERP modules.
                                 </p>
                             </div>
                         </div>
@@ -420,11 +450,11 @@
                                 <h5 class="title">Production Planning Analyst</h5>
                                 <p>Permoda, Bogotá - Colombia</p>
                                 <p class="description">
-                                    Implemented Material Requirements Planning (MRP) methodology for product production
-                                    <b>||</b> Designed and configured technical sheets and spreadsheets for clothing products.
-                                    <b>||</b> Calculated the manufacturing route and the cost of the bill of materials for the garments.
-                                    <b>||</b> Applied engineering industrialization methods and plans to improve the manufacturing process to optimize operating costs.
-                                    <b>||</b> Optimized raw material inventories and allocation based on collection designs.
+                                    <li> Implemented Material Requirements Planning (MRP) methodology for product production
+                                    <li> Designed and configured technical sheets and spreadsheets for clothing products.
+                                    <li> Calculated the manufacturing route and the cost of the bill of materials for the garments.
+                                    <li> Applied engineering industrialization methods and plans to improve the manufacturing process to optimize operating costs.
+                                    <li> Optimized raw material inventories and allocation based on collection designs.
                                 </p>
                             </div>
                         </div>
@@ -445,12 +475,12 @@
                                 <h5 class="title">Production Engineering Analyst</h5>
                                 <p>Permoda, Bogotá - Colombia</p>
                                 <p class="description">
-                                    Designed and enhance workload balancing for production plants.
-                                    <b>||</b> Implemented engineering methods and time analysis for the plans' workstations.
-                                    <b>||</b> Prepared operational listings for garments products.
-                                    <b>||</b> Designed and implement standards time for garments operations.
-                                    <b>||</b> Identified and improved bottlenecks for production modules.
-                                    <b>||</b> Prepared efficiency reports and control the unproductive time of the plant.
+                                    <li> Designed and enhance workload balancing for production plants.
+                                    <li> Implemented engineering methods and time analysis for the plans' workstations.
+                                    <li> Prepared operational listings for garments products.
+                                    <li> Designed and implement standards time for garments operations.
+                                    <li> Identified and improved bottlenecks for production modules.
+                                    <li> Prepared efficiency reports and control the unproductive time of the plant.
                                 </p>
                             </div>
                         </div>
