--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="assets/CV - Jhon Deiber Diaz Parra 3.0.pdf">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="assets/CV - Jhon Deiber Diaz Parra.pdf">Resume</a></li>
                     </ul>
                 </div>
             </div>
@@ -78,26 +78,31 @@
                             <div class="col">
 
                                 <p class="text-white-75">
-                                    I am a creative person in problem solving and analytical thinking. During my studies, 
-                                    I have learned different technologies and programming languages, I am passionate about learning, 
-                                    teamwork and I want to get a great experience as a programmer and thus be able to contribute to the needs of companies and their customers. 
-                                    Throughout my career, I have been involved in large-scale complex projects, reengineering of functionalities and interfaces. 
-                                    I believe that innovation and continuous improvement is a success factors for organizations, 
-                                    so I tirelessly insist on applying these criteria in every initiative in which I have participated.
+                                    I am a professional with extensive skills and experience in the industry, 
+                                    I have experience as an administrator in Microsoft Dynamics ERP, SQL database server, 
+                                    and systems such as POS, eCommerce, WMS, and PLM. I know Object Oriented Programming (OOP), 
+                                    different programming languages and tools that allow me to be a person capable of contributing 
+                                    to the needs of the company and its customers. Throughout my career, 
+                                    I have participated in large-scale complex projects, functionalities, 
+                                    and interfaces reengineering. I believe that innovation and continuous 
+                                    improvement is a success factor for organizations, which is why 
+                                    I tirelessly insist on applying these criteria in all the initiatives in which 
+                                    I have participated. I like to make a difference with my commitment, my responsibility, 
+                                    and my effort, and always give my best.
                                 </p>
                             
                                 <div class="row">
                                     <div class="col">
                                         <p class="text-white text-center">English</p>
                                         <div class="progress">
-                                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                         <p class="text-white text-center">Professional working proficiency</p>
                                     </div>
                                     <div class="col">
                                         <p class="text-white text-center">French</p>
                                         <div class="progress">
-                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 35%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 45%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                         <p class="text-white text-center">Elementary proficiency</p>
                                     </div>
@@ -207,7 +212,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="row">
                         <div class="col">
-                            <h4 class="text-white mt-0 text-center">Training</h4>
+                            <h4 class="text-white mt-0 text-center">Education</h4>
 
                             <div class="row text-white">
                                 <div class="col">
@@ -230,10 +235,10 @@
                                     </div>
                                 </div>
                                 <div class="col-md-9 text-left">
-                                    <div class="h5">Francisation Level 2 FIA109-3</div>
+                                    <div class="h5">Francisation Level 3 FIA209-1</div>
                                     <div class="h7">French studies</div>
                                     <div class="h7">Centre Social d'aide aux Immigrants - CSAI</div>
-                                    <div class="h7">Montreal, Canada&emsp;&emsp;July 2022 - Present</div>
+                                    <div class="h7">Montreal, Canada&emsp;&emsp;Octuber 2022 - Present</div>
                                 </div>          
                             </div><br>
 
@@ -579,7 +584,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">Resume</h2>
-                <a class="btn btn-light btn-xl" href="assets/CV - Jhon Deiber Diaz Parra 3.0.pdf">Download Now</a>
+                <a class="btn btn-light btn-xl" href="assets/CV - Jhon Deiber Diaz Parra.pdf">Download Now</a>
             </div>
         </section>
 
